<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_navy"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.17"
        android:textColor="@color/white"
        android:background="@color/navy"
        android:text="@string/home"
        android:onClick="homeClicked"
        android:textSize="50sp"
        android:textFontWeight="500"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/enter_number_here"
            android:textFontWeight="350"
            android:textSize="40sp"
            android:layout_marginTop="10dp"
            android:inputType="phone"
            android:textColor="@color/white"
            android:autofillHints=""
            android:textColorHint="@color/white" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>